--- a/Microservices/QuizService/src/main/resources/application.properties
+++ b/Microservices/QuizService/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 
 server.port = 8081
+spring.application.name=QUIZ-SERVICE
 spring.datasource.url=jdbc:mysql://localhost:3306/micro
 spring.datasource.username=root
 spring.datasource.password=toor
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+eureka.instance.client.serverUrl.defaultZone=http://localhost:8761
